--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PBL 3기 스마트웹&앱 개발자 양성과정</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+        p {
+            text-align: center;
+        }
+        .text1 {
+            text-align: center;    /* 텍스트-정렬: 가로 가운데*/
+            color: green;        /* 색상 : 녹색
+        }    </style>
+
 </head>
 <body>
-    <h1>자기소개서</h1>
+    <h1 align="center">자기소개서</h1>
     <h3>I.기본사항</h3>
-    <p>안녕하세요 제 이름은 <b>곽영균</b>입니다. 북구 중흥동에 살고있고 27살 남자입니다. <br>만나서 반갑습니다 잘부탁드립니다</p>
+    <p class="text1">안녕하세요 제 이름은 <b>곽영균</b>입니다. 북구 중흥동에 살고있고 27살 남자입니다. <br>만나서 반갑습니다 잘부탁드립니다</p>
+    <img src="https://picsum.photos/200/300" alt="구례 산수유 마을">
     <h3>II.일/아르바이트 경험</h3>
     <p>2020년도 하사 전역 </p>
     <p>2021년도 한식 자영업 운영 (1년8개월)</p>
@@ -18,6 +31,8 @@
     <p>좋아하는것은 강아지, 싫어하는것 벌레</p>
     <h3>IV.꽃구경 추천하는 장소</h3>
     <p>목포 유달산</p>
+    <img src="images/12.jpg" alt="벚꽃">
     <h3>V.최근 본 영화</h3>
     <p>스즈메의 문단속</p>
+    <img src="images/123.jpg" alt="영화">
 </html>
