--- a/index.html
+++ b/index.html
@@ -6,33 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PBL 3기 스마트웹&앱 개발자 양성과정</title>
     <style>
-        h1 {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-        }
-        .text1 {
-            text-align: center;    /* 텍스트-정렬: 가로 가운데*/
-            color: green;        /* 색상 : 녹색
-        }    </style>
+         </style>
 
 </head>
 <body>
     <h1 align="center">자기소개서</h1>
-    <h3>I.기본사항</h3>
-    <p class="text1">안녕하세요 제 이름은 <b>곽영균</b>입니다. 북구 중흥동에 살고있고 27살 남자입니다. <br>만나서 반갑습니다 잘부탁드립니다</p>
-    <img src="https://picsum.photos/200/300" alt="구례 산수유 마을">
-    <h3>II.일/아르바이트 경험</h3>
+    <h2>I.기본사항</h2>
+    <p class="text1">안녕하세요 제 이름은 <b>곽영균</b>입니다. 북구 전남대앞에 살고있고 27살 남자입니다. <br>사진은 집 앞이라 걸어 두었고 다니던곳은 원광대학교 수학통계학과 입니다. <br> 잘부탁드립니다.
+    </p>
+    <img src="images/junnam.jpg"alt=집앞>
+    <h2>II.일/아르바이트 경험</h2>
     <p>2020년도 하사 전역 </p>
     <p>2021년도 한식 자영업 운영 (1년8개월)</p>
     <p>2022년도 만나플래닛 근무 (8개월) </p>
-    <h3>III.좋아하는것과 싫어하는것</h3>
-    <p>좋아하는것은 강아지, 싫어하는것 벌레</p>
-    <h3>IV.꽃구경 추천하는 장소</h3>
+    <h2>III.좋아하는것과 싫어하는것</h2>
+    <p>좋아하는것은 강아지 <img src="images/bichon.jfif" alt="미니비숑"> <br>싫어하는것 벌레(사진은 못넣겠어요)</p>
+    <h2>IV.꽃구경 추천하는 장소</h2>
     <p>목포 유달산</p>
     <img src="images/12.jpg" alt="벚꽃">
-    <h3>V.최근 본 영화</h3>
+    <h2>V.최근 본 영화</h2>
     <p>스즈메의 문단속</p>
     <img src="images/123.jpg" alt="영화">
 </html>
