--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PBL 3기 스마트웹&앱 개발자 양성과정</title>
-    <style>
-         </style>
+  <link rel="stylesheet" href="intro.css">
+  <link rel="stylesheet" href="tablet.css"media="screen and (max-width: 768px)">
 
 </head>
 <body>
     <h1 align="center">자기소개서</h1>
     <h2>I.기본사항</h2>
-    <p class="text1">안녕하세요 제 이름은 <b>곽영균</b>입니다. 북구 전남대앞에 살고있고 27살 남자입니다. <br>사진은 집 앞이라 걸어 두었고 다니던곳은 원광대학교 수학통계학과 입니다. <br> 잘부탁드립니다.
-    </p>
-    <img src="images/junnam.jpg"alt=집앞>
+    <p>안녕하세요 제 이름은 <b>곽영균</b>입니다. <br>북구 전남대앞에 살고있고 27살 남자입니다. <br> 잘부탁드립니다.<br>
+    <a href="https://www.naver.com/"> instagram</a>
+</p>
     <h2>II.일/아르바이트 경험</h2>
-    <p>2020년도 하사 전역 </p>
-    <p>2021년도 한식 자영업 운영 (1년8개월)</p>
-    <p>2022년도 만나플래닛 근무 (8개월) </p>
+    <ul> 
+        <li>2020년도 하사 전역 </li>
+        <li>2021년도 한식 자영업 운영 (1년8개월)</li>
+        <li>2022년도 만나플래닛 근무 (8개월) </li>
+    </ul>
     <h2>III.좋아하는것과 싫어하는것</h2>
-    <p>좋아하는것은 강아지 <img src="images/bichon.jfif" alt="미니비숑"> <br>싫어하는것 벌레(사진은 못넣겠어요)</p>
+    <p> <img src="images/bichon.jfif" alt="미니비숑"><br>좋아하는건 강아지 <br>싫어하는건 벌레 (사진은 못넣겠어요)</p>
     <h2>IV.꽃구경 추천하는 장소</h2>
-    <p>목포 유달산</p>
+    <p class="유달산"><a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%AA%A9%ED%8F%AC+%EC%9C%A0%EB%8B%AC%EC%82%B0&oquery=%EC%8A%A4%EC%A6%88%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&tqi=iu5PndprvxsssLj1vIZssssss5C-358657">목포 유달산</a>
+
+    </p>
     <img src="images/12.jpg" alt="벚꽃">
     <h2>V.최근 본 영화</h2>
-    <p>스즈메의 문단속</p>
+    <p><a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%8A%A4%EC%A6%88%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&oquery=%EC%8A%A4%EC%A6%88%EB%A9%94%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&tqi=iu5PLwprvOssshkV2vZssssssD0-157300">스즈메의 문단속</a>
+        
+    </p>
+
     <img src="images/123.jpg" alt="영화">
 </html>
