--- a/index.html
+++ b/index.html
@@ -4,34 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PBL 3기 스마트웹&앱 개발자 양성과정</title>
-  <link rel="stylesheet" href="intro.css">
-  <link rel="stylesheet" href="tablet.css"media="screen and (max-width: 768px)">
-
+    <title>스마트 웹&amp;앱 개발자</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">자기소개서</h1>
-    <h2>I.기본사항</h2>
-    <p>안녕하세요 제 이름은 <b>곽영균</b>입니다. <br>북구 전남대앞에 살고있고 27살 남자입니다. <br> 잘부탁드립니다.<br>
-    <a href="https://www.naver.com/"> instagram</a>
-</p>
-    <h2>II.일/아르바이트 경험</h2>
-    <ul> 
-        <li>2020년도 하사 전역 </li>
+    <div class="bg-blue" id="avatar-box">1
+        <div id="avatar">
+            <img src="http://picsum.photos/170/170" alt="프로필사진">
+        </div>
+    </div>
+    <div class="summary">
+        <h1>곽영균</h1> <!--제목 : 중요한 내용, 검색엔진이 먼저 찾는 요소!-->
+    <p class="mbti">ESFP</p>
+    <p class="email">rhkrdudrbs13@naver.com</p>
+    <p class="insta">Insta : o._.kyun</p>
+    <p>010-3448-1720</p>
+    </div>
+    <div class="greeting">
+        <h2>인사말</h2>
+        <p>안녕하세요 저는 현재 한울 전문 직업학교에서
+            <br>스마트 웹&앱 콘텐츠 전문개발자 양성과정을 
+            <br>수강하고있는 곽영균 입니다.
+        </p>
+    </div>
+    <div class="info">
+    <h2>기본정보</h2>
+    <ul>
+        <li>
+            <p><img src="images/blood.png" alt=""></p>
+        </li>
+        <li>
+            <p><img src="images/man.png" alt=""></p>
+        </li>
+        <li>별자리
+            <p>물고기자리</p>
+        </li>
+</ul>
+    </div>
+    <div class="job-career">
+    <h2>근무경력</h2>
+    <ul>
+        <li>2020년 하사전역</li>
         <li>2021년도 한식 자영업 운영 (1년8개월)</li>
-        <li>2022년도 만나플래닛 근무 (8개월) </li>
+        <li>2022년도 만나플래닛 근무 (8개월)</li>
     </ul>
-    <h2>III.좋아하는것과 싫어하는것</h2>
-    <p> <img src="images/bichon.jfif" alt="미니비숑"><br>좋아하는건 강아지 <br>싫어하는건 벌레 (사진은 못넣겠어요)</p>
-    <h2>IV.꽃구경 추천하는 장소</h2>
-    <p class="유달산"><a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%AA%A9%ED%8F%AC+%EC%9C%A0%EB%8B%AC%EC%82%B0&oquery=%EC%8A%A4%EC%A6%88%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&tqi=iu5PndprvxsssLj1vIZssssss5C-358657">목포 유달산</a>
-
-    </p>
-    <img src="images/12.jpg" alt="벚꽃">
-    <h2>V.최근 본 영화</h2>
-    <p><a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%8A%A4%EC%A6%88%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&oquery=%EC%8A%A4%EC%A6%88%EB%A9%94%EB%A9%94%EC%9D%98+%EB%AC%B8%EB%8B%A8%EC%86%8D&tqi=iu5PLwprvOssshkV2vZssssssD0-157300">스즈메의 문단속</a>
-        
-    </p>
-
-    <img src="images/123.jpg" alt="영화">
+    </div>
+    <div class="movie-list">
+        <h2>추천하는 영화</h2>
+        <ul>
+            <li>
+                <img src="images/123.jpg" alt="영화">
+                <p>스즈메의 문단속</p>
+            </li>
+            </ul>
+    </div>
+    <div class="owner">
+        <p>&copy; kwakyounggyun</p>
+        <a href="#">▲맨위로</a>
+    </div>
+</body>
 </html>
