--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="스마트 웹&앱 개발자">
+    <meta property="og:site_name" content="스마트 웹&앱 개발자">
+    <meta property="og:url" content="https://kwakyoung.github.io/intro/"">
+    <meta property="og:description" content="곽영균 제작">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
     <title>스마트 웹&amp;앱 개발자</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
