--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://kwakyoung.github.io/intro/"">
     <meta property="og:description" content="곽영균 제작">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://ibb.co/D1rBMkx">
+    <meta property="og:image" content="https://ifh.cc/g/Y3R6w5.png">
     <title>스마트 웹&amp;앱 개발자</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
