--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="스마트 웹&앱 개발자">
-    <meta property="og:site_name" content="스마트 웹&앱 개발자">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="스마트 웹&앱 개발자" />
+    <meta property="og:site_name" content="스마트 웹&앱 개발자" />
     <meta property="og:url" content="https://kwakyoung.github.io/intro/"">
-    <meta property="og:description" content="곽영균 제작">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://ifh.cc/g/Y3R6w5.png">
+    <meta property="og:description" content="곽영균 제작" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://ifh.cc/g/Y3R6w5.png" />
     <title>스마트 웹&amp;앱 개발자</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="bg-blue" id="avatar-box">1
-        <div id="avatar">
-            <img src="http://picsum.photos/170/170" alt="프로필사진">
-        </div>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="bg-blue" id="avatar-box">
+      1
+      <div id="avatar">
+        <img src="https://ifh.cc/g/Y3R6w5.png" alt="프로필사진" />
+      </div>
     </div>
     <div class="summary">
-        <h1>곽영균</h1> <!--제목 : 중요한 내용, 검색엔진이 먼저 찾는 요소!-->
-    <p class="mbti">ESFP</p>
-    <p class="email">rhkrdudrbs13@naver.com</p>
-    <p class="insta">Insta : o._.kyun</p>
-    <p>010-3448-1720</p>
+      <h1>곽영균</h1>
+      <!--제목 : 중요한 내용, 검색엔진이 먼저 찾는 요소!-->
+      <p class="mbti">ESFP</p>
+      <p class="email">rhkrdudrbs13@naver.com</p>
+      <p class="insta">Insta : o._.kyun</p>
+      <p>010-3448-1720</p>
     </div>
     <div class="greeting">
-        <h2>인사말</h2>
-        <p>안녕하세요 저는 현재 한울 전문 직업학교에서
-            <br>스마트 웹&앱 콘텐츠 전문개발자 양성과정을 
-            <br>수강하고있는 곽영균 입니다.
-        </p>
+      <h2>인사말</h2>
+      <p>
+        안녕하세요 저는 현재 한울 전문 직업학교에서 <br />스마트 웹&앱 콘텐츠
+        전문개발자 양성과정을 <br />수강하고있는 곽영균 입니다.
+      </p>
     </div>
     <div class="info">
-    <h2>기본정보</h2>
-    <ul>
+      <h2>기본정보</h2>
+      <ul>
         <li>
-            <p><img src="images/blood.png" alt=""></p>
+          <p><img src="images/blood.png" alt="" /></p>
         </li>
         <li>
-            <p><img src="images/man.png" alt=""></p>
+          <p><img src="images/man.png" alt="" /></p>
         </li>
-        <li>별자리
-            <p>물고기자리</p>
+        <li>
+          별자리
+          <p>물고기자리</p>
         </li>
-</ul>
+      </ul>
     </div>
     <div class="job-career">
-    <h2>근무경력</h2>
-    <ul>
+      <h2>근무경력</h2>
+      <ul>
         <li>2020년 하사전역</li>
         <li>2021년도 한식 자영업 운영 (1년8개월)</li>
         <li>2022년도 만나플래닛 근무 (8개월)</li>
-    </ul>
+      </ul>
     </div>
     <div class="movie-list">
-        <h2>추천하는 영화</h2>
-        <ul>
-            <li>
-                <img src="images/123.jpg" alt="영화">
-                <p>스즈메의 문단속</p>
-            </li>
-            </ul>
+      <h2>추천하는 영화</h2>
+      <ul>
+        <li>
+          <img src="images/123.jpg" alt="영화" />
+          <p>스즈메의 문단속</p>
+        </li>
+      </ul>
     </div>
     <div class="owner">
-        <p>&copy; kwakyounggyun</p>
-        <a href="#">▲맨위로</a>
+      <p>&copy; kwakyounggyun</p>
+      <a href="#">▲맨위로</a>
     </div>
-</body>
+  </body>
 </html>
