--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <title>스마트 웹&amp;앱 개발자</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="bg-blue" id="avatar-box">
